--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -99,6 +99,10 @@ a {
 /*============================
 GENERAL STYLES================
 ==============================*/
+body {
+  background-color: #fafafa;
+  color: inherit;
+}
 
 /*============================
 ANIMATIONS====================
