Fix color problem

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -99,6 +99,9 @@ a {
 /*============================
 GENERAL STYLES================
 ==============================*/
+body {
+  background-color: #fafafa;
+}
 
 /*============================
 ANIMATIONS====================
