--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -103,6 +103,22 @@ body {
   background-color: #fafafa;
 }
 
+.page-appearance-animation {
+  opacity: 0;
+  transform: translateX(-10%) scale(0.95);
+  animation: pageAppearanceAnimation 0.8s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+}
+
 /*============================
 ANIMATIONS====================
 ==============================*/
+@keyframes pageAppearanceAnimation {
+  from {
+    opacity: 0;
+    transform: translateX(-10%) scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+}
